--- a/blog/app/assets/stylesheets/article_show.scss
+++ b/blog/app/assets/stylesheets/article_show.scss
@@ -47,6 +47,7 @@
 
 #sharing {
   margin: 0px auto;
+  text-align: center;
   p {
     // padding: 0 0 1em 0;
     text-align: center;
